jenkins-reporting-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-reporting
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins-reporting
  template:
    metadata:
      labels:
        app: jenkins-reporting
    spec:    
      containers:
      - name: dashboard
        image: docker.io/gauravkr19/jenkins-reporting:v5
        ports:
        - containerPort: 8091
        resources:
          requests:
            cpu: 100m
            memory: 750Mi
          limits:
            cpu: 100m
            memory: 750Mi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jenkins-reporting
  name: jenkins-reporting
spec:
  ports:
  - port: 8091
    name: http
    targetPort: 8091
  selector:
    app: jenkins-reporting
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: jenkins-reporting
spec:
  host: jenkins-reporting.apps.domain
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: jenkins-reporting
